Some minor changes, final slide

--- a/index.html
+++ b/index.html
@@ -243,11 +243,17 @@
 					<aside class="notes">
 						<p>
 							Obviously this model was not sustainable, and TC39 realized this.
-							After years of working on ES6 they decided that they need to change
+							TC39 is the committee in charge of Ecmascript, they are super
+							creative in Europe, so it stands for Technical Committee 39. Ecmascript
+							is actually ECMA262, because again, they are super creative in naming.
+							All their standards get numbered like IETF RFC's, etc.
+						</p>
+						<p>
+							Anyway, after years of working on ES6 they decided that they need to change
 							to a yearly / agile model.  Whatever features were approved that year
 							were the new spec.
 						</p>
-						<p>The language needs to move at the speed of browser development.</p>
+						<p>The language needed to move at the speed of browser development.</p>
 					</aside>
 				</section>
 
@@ -348,6 +354,10 @@ a **= 4;
 				</section>
 
 				<section>
+					<h2>What's it all mean?</h2>
+
+					<img class="stretch fragment" src="/assets/img/proposals.png">
+
 					<aside class="notes">
 						The new proposal process allows the ECMAscript implentation to
 						adapt much more quickly to the changing web landscape.  At any given
