--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section data-background="/assets/img/cover.png">
-					<h1 class="fragment">A Tale of Two Asterisks</h1>
+					<h1 class="fragment">
+						A Tale of Two Asterisks<br>
+						<code>2 ** 4 === 16</code>
+					</h1>
 
 					<aside class="notes">
 						Javascript today is a very quickly evolving language but this wasn't
@@ -192,6 +195,12 @@
 							<p class="fragment">Additionally, <code>concat</code> and <code>replace</code> added.</p>
 						</dd>
 					</dl>
+
+					<aside class="notes">
+						<p>
+							So how did they solve that problem?
+						</p>
+					</aside>
 				</section>
 
 				<section data-background="/assets/img/0524.jpg">
